# TruMAN

./: .gitattributes  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  PRODUCTION.md  README.md  docker-compose.yml  docker-entrypoint.sh  ffi_test.js  fix_ffi.sh  run_demo.sh
backend/: Cargo.toml  README.md  backend.h  backend_improved.h
backend/src/: communication.rs  ffi.rs  ffi_test.rs  internal.rs  lib.rs  lib.rs.bak  log.rs  main.rs  runtime.rs
backend/src/gossip/: events.rs  impls.rs  message.rs  mod.rs  nonce.rs  room.rs  whitelist.rs
backend_runner/: Cargo.toml
backend_runner/src/: main.rs
frontend/: App.tsx  package-lock.json  package.json
frontend/components/: BottomNav.tsx
frontend/screens/: AdminNewWolf.tsx  BroadcastMessages.tsx  HomeScreen.tsx  MessagesScreen.tsx  PeerScreen.tsx
frontend/screens/Wolf/: AdminNewWolf.tsx
frontend/services/: backend.ts  database.ts
reference_backend/: Cargo.toml  Dockerfile  README.md
reference_backend/src/: block.rs  communication.rs  lib.rs  main.rs  user.rs
reference_backend/src/gossip/: events.rs  message.rs  mod.rs  room.rs  secret.rs
uniffi_test/: Cargo.toml  build.rs
uniffi_test/src/: backend.udl  lib.rs
