[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
futures = "0.3.31"
jni = "0.21.1"
lazy_static = "1.5.0"
libp2p = { version = "0.55.0", features = [
  "tokio", "gossipsub", "mdns", "noise",
  "macros", "tcp", "yamux", "quic", "serde"
] }
oqs = "0.11.0"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
