[package]
name = "uniffi_test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["full"] }
uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []
lib = []